完成了登录注册功能

--- a/login.html
+++ b/login.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录注册页面</title>
+    <title>大事件-登录/注册</title>
+    <!-- 引入图标 -->
+    <link rel="stylesheet" href="/favicon.ico">
+    <!-- 先导入layui样式 在导入自己的样式-->
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css">
+    <!-- live server 启动以后 以code目录为根目录 -->
+    <link rel="stylesheet" href="/assets/css/login.css">
+
 </head>
+
 <body>
-    
+    <!-- 顶部logo -->
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="" />
+    </div>
+
+    <!-- 登录注册区域 -->
+    <div class="loginAndRegBox">
+        <div class="title-box"></div>
+        <!-- 登录的div -->
+        <div class="login-box">
+            <form class="layui-form" id="form_login">
+                <!-- 登录名 -->
+                <div class="layui-form-item">
+                    <!-- 输入框前的图标 -->
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input value="cyz" type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input value="123456" type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <!-- 表单的提交按钮和别的按钮区别 有lay-submit属性 -->
+                    <!-- type 要么不写 要么设置为 submit 可以提交表单 -->
+                    <!-- lay-submit 是一个属性，必须写 ，未来可以利用这个属性做表单校验 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-filter="formDemo">登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javaScript:;" id="link_reg">去注册账号</a>
+                </div>
+            </form>
+        </div>
+        <!-- 注册的div -->
+        <div class="reg-box">
+            <form class="layui-form" id="form_reg">
+                <!-- 登录名 -->
+                <div class="layui-form-item">
+                    <!-- 输入框前的图标 -->
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <!-- 输入框前的图标 -->
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 再次确认密码 -->
+                <div class="layui-form-item">
+                    <!-- 输入框前的图标 -->
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="repassword" required lay-verify="required|pwd|repwd" placeholder="再次确认密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item">
+                    <!-- 表单的提交按钮和别的按钮不同 有lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-filter="formDemo">注册</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javaScript:;" id="link_login">去登陆</a>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- 导入layui的js文件,不带all的功能少，且需要配置代码 -->
+    <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 导入jquery -->
+    <script src="/assets/lib/jquery.js"></script>
+    <!-- 在jquery和自己的逻辑之间导入自己封装的baseApi.js -->
+    <script src="/assets/js/baseApi.js"></script>
+    <!-- 导入自己的js -->
+    <script src="/assets/js/login.js"></script>
 </body>
+
 </html>
